[package]
name = "activesupport"
version = "0.0.1-alpha.5"
description = "Utility extensions for Rust inspired by activesupport of Ruby on Rails"
homepage = "https://github.com/dechaoqiu/activesupport"
repository = "https://github.com/dechaoqiu/activesupport"
keywords = ["date", "time", "activesupport", "rails"]
categories = ["date-and-time"]
readme = "README.md"
documentation = "https://docs.rs/activesupport/"
license = "MIT"
edition = "2021"
rust-version = "1.70.0"

[dependencies]
chrono = "0.4"
